--- a/app/assets/stylesheets/components/skill.scss
+++ b/app/assets/stylesheets/components/skill.scss
@@ -1,13 +1,13 @@
 @media screen {
-  $max-font-size: 7;
+  $max_font_size: 7;
   $unit: 'em';
 
   .skill {
-    margin: 10px;
-    padding: 0;
-    line-height: 30px;
     align-self: center;
     display: block;
+    line-height: 30px;
+    margin: 10px;
+    padding: 0;
 
     @media screen and (min-width: 420px) {
       display: inline-block;
@@ -15,7 +15,7 @@
 
     @for $value from 0 through 100 {
       &.s-#{$value} {
-        font-size: #{(($max-font-size * $value) / 100)}#{$unit};
+        font-size: #{(($max_font_size * $value) / 100)}#{$unit};
       }
     }
   }
