--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,24 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title><%= t(:title, scope: %i[frontend helpers]) %></title>
+  <link rel="manifest" href="manifest.json">
+  <%= favicon_link_tag %>
+  <%= favicon_link_tag "icons/apple-icon-57x57.png", rel: "apple-touch-icon", sizes: "57x57" %>
+  <%= favicon_link_tag "icons/apple-icon-60x60.png", rel: "apple-touch-icon", sizes: "60x60" %>
+  <%= favicon_link_tag "icons/apple-icon-72x72.png", rel: "apple-touch-icon", sizes: "72x72" %>
+  <%= favicon_link_tag "icons/apple-icon-76x76.png", rel: "apple-touch-icon", sizes: "76x76" %>
+  <%= favicon_link_tag "icons/apple-icon-114x114.png", rel: "apple-touch-icon", sizes: "114x114" %>
+  <%= favicon_link_tag "icons/apple-icon-120x120.png", rel: "apple-touch-icon", sizes: "120x120" %>
+  <%= favicon_link_tag "icons/apple-icon-144x144.png", rel: "apple-touch-icon", sizes: "144x144" %>
+  <%= favicon_link_tag "icons/apple-icon-152x152.png", rel: "apple-touch-icon", sizes: "152x152" %>
+  <%= favicon_link_tag "icons/apple-icon-180x180.png", rel: "apple-touch-icon", sizes: "180x180" %>
+  <%= favicon_link_tag "icons/android-icon-192x192.png", rel: "icon", type: "image/png", sizes: "192x192"  %>
+  <%= favicon_link_tag "icons/favicon-32x32.png", rel: "icon", type: "image/png", sizes: "32x32" %>
+  <%= favicon_link_tag "icons/favicon-96x96.png", rel: "icon", type: "image/png", sizes: "96x96" %>
+  <%= favicon_link_tag "icons/favicon-16x16.png", rel: "icon", type: "image/png", sizes: "16x16" %>
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="<%= asset_path "icons/ms-icon-144x144.png" %>">
+  <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="<%=@about.description%>" />
   <!-- Open Graph Tags -->
@@ -24,7 +42,7 @@
   <%= javascript_pack_tag 'application', type: 'application/javascript' %>
   <%= csrf_meta_tags %>
 </head>
-<body id="home" class="<%= I18n.locale.downcase %>" data-locale="<%= I18n.locale %>">
+<body id="home" class="<%= body_class %>" data-locale="<%= I18n.locale %>">
   <div class="wrapper" id="wrapper">
     <vue-header></vue-header>
     <%=yield%>
@@ -33,8 +51,6 @@
   <noscript>
     <%=render 'no_js'%>
   </noscript>
-  <%=render 'schema'%>
-  <%= javascript_include_tag 'modernizr', 'data-turbolinks-track': true %>
   <%= Gon::Base.render_data %>
 </body>
 </html>
