--- a/app/javascript/stylesheets/setup.scss
+++ b/app/javascript/stylesheets/setup.scss
@@ -104,21 +104,21 @@ img {
 .errors {
   @apply bg-white text-black text-center;
 
-  .error-page {
+  .page {
     @apply flex w-full h-screen;
     align-self: center;
     justify-content: center;
     flex-direction: column;
   }
 
-  .error-page__header {
+  .page-header {
     align-self: center;
 
-    .error-page__header-image {
+    .page-header-image {
       @apply w-112 inline;
     }
 
-    .error-page__title {
+    .page-title {
       @apply font-error text-31;
       align-self: center;
     }
