--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title><%= t(:title, scope: %i[frontend helpers]) %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <%= javascript_pack_tag 'admin/application', type: 'application/javascript' %>
+    <%= javascript_pack_tag 'admin/application', type: 'application/javascript', defer: true %>
     <%= stylesheet_link_tag 'admin/application', media: 'all', rel: 'stylesheet' %>
     <%= csrf_meta_tags %>
   </head>
@@ -53,6 +53,5 @@
         &copy; <%= Date.today.year %> <%= t(:title, scope: %i[frontend helpers]) %>
       </div>
     </footer>
-    <%= Gon::Base.render_data %>
   </body>
 </html>
