--- a/app/views/admin/educations/_education.html.erb
+++ b/app/views/admin/educations/_education.html.erb
@@ -2,7 +2,7 @@
   <div class="list-group-item flex-column align-items-start">
     <div class="d-flex justify-content-between pb-2 pt-2">
       <h5 class="mb-1"><%= education.course %></h5>
-      <small><%= l education.start_date %><br /><%= end_date(education.end_date) %></small>
+      <small><%= education.start_date %><br /><%= education.end_date %></small>
       <div class="btn-toolbar mb-2 mb-md-0">
         <div class="btn-group">
           <%= link_to t(:edit, scope: %i[helpers]), [:edit, :admin, education], class: 'btn btn-primary btn-sm btn-outline-secondary' %>
