--- a/app/views/admin/work_experiences/_work_experience.html.erb
+++ b/app/views/admin/work_experiences/_work_experience.html.erb
@@ -5,8 +5,8 @@
       <small><%= work_experience.start_date %><br /><%= work_experience.end_date %></small>
       <div class="btn-toolbar mb-2 mb-md-0">
         <div class="btn-group">
-          <%= link_to t(:edit, scope: %i[helpers]), [:edit, :admin, work_experience], class: 'btn btn-primary btn-sm btn-outline-secondary' %>
-          <%= link_to t(:delete, scope: %i[helpers]), [:admin, work_experience], class: 'btn btn-primary btn-sm btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %>
+          <%= link_to t(:edit, scope: %i[helpers]), [:edit, :admin, work_experience], class: 'btn btn-sm btn-outline-primary' %>
+          <%= link_to t(:delete, scope: %i[helpers]), [:admin, work_experience], class: 'btn btn-sm btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %>
         </div>
       </div>
     </div>
