--- a/app/assets/stylesheets/cv/_functions.scss
+++ b/app/assets/stylesheets/cv/_functions.scss
@@ -1,5 +1,6 @@
 @function size_with_unit($size) {
   $base: 16;
-  $unit: 'rem';
-  @return ($size / $base)#{$unit};
-};
+  $unit: "rem";
+
+  @return unquote("#{$size / $base}#{$unit}");
+}
