--- a/app/views/download/_contact.html.erb
+++ b/app/views/download/_contact.html.erb
@@ -1,7 +1,7 @@
 <div class="page contacts">
   <div class="col">
     <h1><%= t(:contact, scope: %i[cv]) %></h1>
-    <ul class="circle">
+    <ul class="arrow">
       <li><%= link_to request.host, root_url %></li>
       <li><%= link_to @about.email, "mailto:#{@about.email}" %></li>
       <li><%= link_to 'github.com/gmmcal', 'https://github.com/gmmcal' %></li>
