--- a/app/assets/stylesheets/cv/_variables.scss
+++ b/app/assets/stylesheets/cv/_variables.scss
@@ -14,6 +14,6 @@ $sizes: (
   'date': $body_size * 1.2,
   'footnote': $body_size * 1,
   'contact': $body_size * 3.5,
-  'footer': $body_size * 0.8,
+  'footer': $body_size * .8,
   'bullet': $body_size * 2.5,
 );
