--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,32 +11,32 @@
   <%= javascript_pack_tag 'application', type: 'application/javascript', defer: true %>
   <link rel="manifest" href="manifest.json">
   <%= favicon_link_tag %>
-  <%= favicon_link_tag "icons/apple-icon-57x57.png", rel: "apple-touch-icon", sizes: "57x57" %>
-  <%= favicon_link_tag "icons/apple-icon-60x60.png", rel: "apple-touch-icon", sizes: "60x60" %>
-  <%= favicon_link_tag "icons/apple-icon-72x72.png", rel: "apple-touch-icon", sizes: "72x72" %>
-  <%= favicon_link_tag "icons/apple-icon-76x76.png", rel: "apple-touch-icon", sizes: "76x76" %>
-  <%= favicon_link_tag "icons/apple-icon-114x114.png", rel: "apple-touch-icon", sizes: "114x114" %>
-  <%= favicon_link_tag "icons/apple-icon-120x120.png", rel: "apple-touch-icon", sizes: "120x120" %>
-  <%= favicon_link_tag "icons/apple-icon-144x144.png", rel: "apple-touch-icon", sizes: "144x144" %>
-  <%= favicon_link_tag "icons/apple-icon-152x152.png", rel: "apple-touch-icon", sizes: "152x152" %>
-  <%= favicon_link_tag "icons/apple-icon-180x180.png", rel: "apple-touch-icon", sizes: "180x180" %>
-  <%= favicon_link_tag "icons/android-icon-192x192.png", rel: "icon", type: "image/png", sizes: "192x192"  %>
-  <%= favicon_link_tag "icons/favicon-32x32.png", rel: "icon", type: "image/png", sizes: "32x32" %>
-  <%= favicon_link_tag "icons/favicon-96x96.png", rel: "icon", type: "image/png", sizes: "96x96" %>
-  <%= favicon_link_tag "icons/favicon-16x16.png", rel: "icon", type: "image/png", sizes: "16x16" %>
+  <%= favicon_link_tag 'icons/apple-icon-57x57.png', rel: 'apple-touch-icon', sizes: '57x57' %>
+  <%= favicon_link_tag 'icons/apple-icon-60x60.png', rel: 'apple-touch-icon', sizes: '60x60' %>
+  <%= favicon_link_tag 'icons/apple-icon-72x72.png', rel: 'apple-touch-icon', sizes: '72x72' %>
+  <%= favicon_link_tag 'icons/apple-icon-76x76.png', rel: 'apple-touch-icon', sizes: '76x76' %>
+  <%= favicon_link_tag 'icons/apple-icon-114x114.png', rel: 'apple-touch-icon', sizes: '114x114' %>
+  <%= favicon_link_tag 'icons/apple-icon-120x120.png', rel: 'apple-touch-icon', sizes: '120x120' %>
+  <%= favicon_link_tag 'icons/apple-icon-144x144.png', rel: 'apple-touch-icon', sizes: '144x144' %>
+  <%= favicon_link_tag 'icons/apple-icon-152x152.png', rel: 'apple-touch-icon', sizes: '152x152' %>
+  <%= favicon_link_tag 'icons/apple-icon-180x180.png', rel: 'apple-touch-icon', sizes: '180x180' %>
+  <%= favicon_link_tag 'icons/android-icon-192x192.png', rel: 'icon', type: 'image/png', sizes: '192x192'  %>
+  <%= favicon_link_tag 'icons/favicon-32x32.png', rel: 'icon', type: 'image/png', sizes: '32x32' %>
+  <%= favicon_link_tag 'icons/favicon-96x96.png', rel: 'icon', type: 'image/png', sizes: '96x96' %>
+  <%= favicon_link_tag 'icons/favicon-16x16.png', rel: 'icon', type: 'image/png', sizes: '16x16' %>
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="<%= asset_path "icons/ms-icon-144x144.png" %>">
+  <meta name="msapplication-TileImage" content="<%= asset_url('icons/ms-icon-144x144.png') %>">
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="<%=@about.description%>" />
   <!-- Open Graph Tags -->
   <meta property="og:title" content="<%= t(:title, scope: %i[frontend helpers]) %>" />
   <meta property="og:site_name" content="<%= t(:header, scope: %i[frontend helpers]) %>"/>
-  <meta property="og:image" content="<%=asset_url('avatar.jpg')%>"/>
-  <meta property="og:url" content="<%=home_url(I18n.locale)%>" />
-  <meta property="og:description" content="<%=@about.description%>" />
+  <meta property="og:image" content="<%= asset_url('avatar.jpg') %>"/>
+  <meta property="og:url" content="<%= home_url(I18n.locale) %>" />
+  <meta property="og:description" content="<%= @about.description %>" />
   <meta property="og:type" content="website" />
-  <meta property="og:locale" content="<%=I18n.locale%>" />
+  <meta property="og:locale" content="<%= I18n.locale %>" />
   <!--google font style-->
   <!--font-family: 'Open Sans', sans-serif;-->
   <%= csrf_meta_tags %>
@@ -44,11 +44,11 @@
 <body id="home" class="<%= body_class %>" data-locale="<%= I18n.locale %>">
   <div class="wrapper" id="wrapper">
     <vue-header></vue-header>
-    <%=yield%>
+    <%= yield %>
     <vue-footer></vue-footer>
   </div>
   <noscript>
-    <%=render 'no_js'%>
+    <%= render 'no_js' %>
   </noscript>
   <%= Gon::Base.render_data %>
 </body>
