Setup CORS. Clean build process on travis

--- a/app/views/pwa/worker.js.erb
+++ b/app/views/pwa/worker.js.erb
@@ -5,28 +5,28 @@ function onInstall(event) {
   event.waitUntil(
     caches.open(CACHE_NAME).then(function prefill(cache) {
       return cache.addAll([
-        '<%= asset_pack_path 'application.js' %>',
-        '<%= asset_pack_path 'application.css' %>',
-        '<%= asset_pack_path 'media/images/flags.png' %>',
-        '<%= asset_path "icons/apple-icon-57x57.png" %>',
-        '<%= asset_path "icons/apple-icon-60x60.png" %>',
-        '<%= asset_path "icons/apple-icon-72x72.png" %>',
-        '<%= asset_path "icons/apple-icon-76x76.png" %>',
-        '<%= asset_path "icons/apple-icon-114x114.png" %>',
-        '<%= asset_path "icons/apple-icon-120x120.png" %>',
-        '<%= asset_path "icons/apple-icon-144x144.png" %>',
-        '<%= asset_path "icons/apple-icon-152x152.png" %>',
-        '<%= asset_path "icons/apple-icon-180x180.png" %>',
-        '<%= asset_path "icons/android-icon-144x144.png" %>',
-        '<%= asset_path "icons/android-icon-192x192.png" %>',
-        '<%= asset_path "icons/favicon-32x32.png" %>',
-        '<%= asset_path "icons/favicon-96x96.png" %>',
-        '<%= asset_path "icons/favicon-16x16.png" %>',
-        '<%= asset_path "icons/ms-icon-144x144.png" %>',
-        '<%= asset_path "favicon.ico" %>',
+        '<%= asset_pack_url 'application.js' %>',
+        '<%= asset_pack_url 'application.css' %>',
+        '<%= asset_pack_url 'media/images/flags.png' %>',
+        '<%= asset_url 'icons/apple-icon-57x57.png' %>',
+        '<%= asset_url 'icons/apple-icon-60x60.png' %>',
+        '<%= asset_url 'icons/apple-icon-72x72.png' %>',
+        '<%= asset_url 'icons/apple-icon-76x76.png' %>',
+        '<%= asset_url 'icons/apple-icon-114x114.png' %>',
+        '<%= asset_url 'icons/apple-icon-120x120.png' %>',
+        '<%= asset_url 'icons/apple-icon-144x144.png' %>',
+        '<%= asset_url 'icons/apple-icon-152x152.png' %>',
+        '<%= asset_url 'icons/apple-icon-180x180.png' %>',
+        '<%= asset_url 'icons/android-icon-144x144.png' %>',
+        '<%= asset_url 'icons/android-icon-192x192.png' %>',
+        '<%= asset_url 'icons/favicon-32x32.png' %>',
+        '<%= asset_url 'icons/favicon-96x96.png' %>',
+        '<%= asset_url 'icons/favicon-16x16.png' %>',
+        '<%= asset_url 'icons/ms-icon-144x144.png' %>',
+        '<%= asset_url 'favicon.ico' %>',
         'https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,800,300',
-        '/manifest.json',
-        '/offline'
+        '<%= service_worker_url %>',
+        '<%= offline_url %>'
       ]);
     })
   );
