Extract country selects to it's own simple class

--- a/app/views/admin/work_experiences/_form.html.erb
+++ b/app/views/admin/work_experiences/_form.html.erb
@@ -7,7 +7,7 @@
     <%= f.input :company_name %>
     <%= f.input :position %>
     <%= f.input :city %>
-    <%= f.input :country %>
+    <%= f.input :country, collection: Country.all %>
     <%= f.input :start_date, include_blank: true %>
     <%= f.input :end_date, include_blank: true %>
     <%= f.input :description %>
