--- a/app/views/admin/about/_form.html.erb
+++ b/app/views/admin/about/_form.html.erb
@@ -6,7 +6,7 @@
   <div class="form-inputs">
     <%= f.input :job_title %>
     <%= f.input :description %>
-    <%= f.input :country %>
+    <%= f.input :country, collection: Country.all %>
     <%= f.input :city %>
     <%= f.input :phone_number %>
     <%= f.input :email %>
