--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,5 +51,6 @@
     <%= render 'no_js' %>
   </noscript>
   <%= Gon::Base.render_data %>
+  <!-- File generated at <%= Time.now %>-->
 </body>
 </html>
