--- a/app/views/errors/internal_error.html.erb
+++ b/app/views/errors/internal_error.html.erb
@@ -1,1 +1,1 @@
-<vue-error-500></vue-error-500>
+<%= render partial: 'error', locals: { leading: 'Looks like you found a bug...', content: 'Let me check if I can find a fix for it. BRB!' }%>
