--- a/app/views/errors/unacceptable.html.erb
+++ b/app/views/errors/unacceptable.html.erb
@@ -1,1 +1,1 @@
-<vue-error-422></vue-error-422>
+<%= render partial: 'error', locals: { leading: 'The change you wanted was rejected', content: 'Don\'t feel bad. It happens to everyone.' }%>
