--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,5 @@
-<vue-body></vue-body>
-<%=render 'schema'%>
+<%=render 'about' %>
+<%=render 'work_experiences' %>
+<%=render 'skills' %>
+<%=render 'educations' %>
+<%=render 'contact' %>
