--- a/app/javascript/stylesheets/components/experience.scss
+++ b/app/javascript/stylesheets/components/experience.scss
@@ -42,7 +42,7 @@
           @apply pb-22;
         }
 
-        /deep/ p {
+        p {
           @apply text-blue-dark-grayish-2 leading-21 pb-5;
         }
 
