--- a/app/views/errors/not_found.html.erb
+++ b/app/views/errors/not_found.html.erb
@@ -1,1 +1,1 @@
-<vue-error-404></vue-error-404>
+<%= render partial: 'error', locals: { leading: 'Page Not Found', content: 'The page you are looking for could not be found. You can trying getting to another place in the menu above' }%>
