--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,13 +43,10 @@
 </head>
 <body id="home" class="<%= body_class %>" data-locale="<%= I18n.locale %>">
   <div class="wrapper" id="wrapper">
-    <vue-header></vue-header>
+    <%= render 'header' %>
     <%= yield %>
-    <vue-footer></vue-footer>
+    <%= render 'footer' %>
   </div>
-  <noscript>
-    <%= render 'no_js' %>
-  </noscript>
   <%= Gon::Base.render_data %>
   <!-- File generated at <%= Time.now %>-->
 </body>
