--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,7 +1,7 @@
 <header>
   <div class="menu fixed-top">
     <div class="navbar navbar-expand-md navbar-dark">
-      <button aria-label="Menu" type="button" class="navbar-toggler">
+      <button aria-label="Menu" type="button" class="navbar-toggler" id="menu-navbar-toggler">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="menu-container collapse navbar-collapse">
