--- a/app/views/home/_contact.html.erb
+++ b/app/views/home/_contact.html.erb
@@ -22,7 +22,7 @@
             <%= @about.phone_number %>
           </p>
           <p class="email col-xs-12 col-sm-6 col-md-6 col-lg-4">
-            <svg class="fas fa-email"></svg>
+            <svg class="fas fa-inbox"></svg>
             <%= @about.email %>
           </p>
           <p class="github col-xs-12 col-sm-6 col-md-6 col-lg-4">
