--- a/app/javascript/stylesheets/components/skill.scss
+++ b/app/javascript/stylesheets/components/skill.scss
@@ -1,5 +1,6 @@
 @media screen {
   $max_font_size: 7;
+  $max_font_size_responsive: 5;
   $unit: 'rem';
 
   .skill {
@@ -12,6 +13,12 @@
     @for $value from 0 through 100 {
       &.s-#{$value} {
         font-size: #{(($max_font_size * $value) / 100)}#{$unit};
+      }
+
+      @media screen and (max-width: 500px) {
+        &.s-#{$value} {
+          font-size: #{(($max_font_size_responsive * $value) / 100)}#{$unit};
+        }
       }
     }
   }
