--- a/app/javascript/stylesheets/components/skill.scss
+++ b/app/javascript/stylesheets/components/skill.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 @media screen {
   $max_font_size: 7;
   $max_font_size_responsive: 5;
@@ -12,12 +14,12 @@
 
     @for $value from 0 through 100 {
       &.s-#{$value} {
-        font-size: #{(($max_font_size * $value) / 100)}#{$unit};
+        font-size: #{math.div($max_font_size * $value, 100)}#{$unit};
       }
 
       @media screen and (max-width: 500px) {
         &.s-#{$value} {
-          font-size: #{(($max_font_size_responsive * $value) / 100)}#{$unit};
+          font-size: #{math.div($max_font_size_responsive * $value, 100)}#{$unit};
         }
       }
     }
