--- a/app/assets/stylesheets/frontend/images.scss
+++ b/app/assets/stylesheets/frontend/images.scss
@@ -4,42 +4,42 @@
 
 .arrowpart {
   @apply bg-no-repeat bg-position-arrow-left;
-  background-image: url('../images/arrow-left-light.png');
+  background-image: url('frontend/arrow-left-light.png');
 
   @media screen and (max-width: 767px) {
     @apply bg-no-repeat bg-position-arrow-top;
-    background-image: url('../images/arrow-top-light.png');
+    background-image: url('frontend/arrow-top-light.png');
   }
 }
 
 .flag {
   @apply bg-no-repeat;
-  background-image: url('../images/flags.png');
+  background-image: url('frontend/flags.png');
 }
 
 .skill-bg {
   @apply bg-no-repeat bg-position-0;
-  background-image: url('../images/skills.png');
+  background-image: url('frontend/skills.png');
 }
 
 .banner {
   .banner-img {
     &::after {
       @apply bg-no-repeat bg-position-0;
-      background-image: url('../images/banner-small.jpg');
+      background-image: url('frontend/banner-small.jpg');
     }
 
     &.visible::after {
       @media screen and (min-width: 420px) and (max-width: 767px) {
-        background-image: url('../images/banner-medium.jpg');
+        background-image: url('frontend/banner-medium.jpg');
       }
 
       @media screen and (min-width: 768px) and (max-width: 1023px) {
-        background-image: url('../images/banner-large.jpg');
+        background-image: url('frontend/banner-large.jpg');
       }
 
       @media screen and (min-width: 1024px) {
-        background-image: url('../images/banner.jpg');
+        background-image: url('frontend/banner.jpg');
       }
     }
   }
@@ -48,19 +48,19 @@
 .about-me {
   .topmar {
     @apply bg-no-repeat bg-position-0;
-    background-image: url('../images/gmmcal-small.png');
+    background-image: url('frontend/gmmcal-small.png');
 
     &.visible {
       @media screen and (min-width: 420px) and (max-width: 767px) {
-        background-image: url('../images/gmmcal-medium.png');
+        background-image: url('frontend/gmmcal-medium.png');
       }
 
       @media screen and (min-width: 768px) and (max-width: 1023px) {
-        background-image: url('../images/gmmcal-large.png');
+        background-image: url('frontend/gmmcal-large.png');
       }
 
       @media screen and (min-width: 1024px) {
-        background-image: url('../images/gmmcal.png');
+        background-image: url('frontend/gmmcal.png');
       }
     }
   }
