--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title><%= t(:title, scope: %i[frontend helpers]) %></title>
-  <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': true, rel: 'stylesheet' %>
-  <%= javascript_pack_tag 'application', type: 'application/javascript', defer: true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': true, rel: 'stylesheet' %>
+  <%= javascript_include_tag 'application', type: 'application/javascript', defer: true %>
   <link rel="manifest" href="manifest.json">
   <%= favicon_link_tag %>
   <%= favicon_link_tag 'icons/apple-icon-57x57.png', rel: 'apple-touch-icon', sizes: '57x57' %>
@@ -40,6 +40,7 @@
   <!--google font style-->
   <!--font-family: 'Open Sans', sans-serif;-->
   <%= csrf_meta_tags %>
+    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
 </head>
 <body id="home" class="<%= body_class %>" data-locale="<%= I18n.locale %>">
   <div class="wrapper" id="wrapper">
