Fix Procfile.dev and CV path for image

--- a/app/views/download/_about.html.erb
+++ b/app/views/download/_about.html.erb
@@ -5,6 +5,6 @@
     <p class="note"><%= t(:spoken_languages, scope: %i[cv], languages: spoken_languages) %></p>
   </div>
   <div class="col right">
-    <%= image_tag asset_url('gmmcal.png'), alt: t(:name, scope: %i[frontend template]), itemprop: "image" %>
+    <%= image_tag asset_url('frontend/gmmcal.png'), alt: t(:name, scope: %i[frontend template]), itemprop: "image" %>
   </div>
 </div>
