Replace turbolinks with hotwire and turbo

--- a/app/assets/stylesheets/admin/_bootstrap.scss
+++ b/app/assets/stylesheets/admin/_bootstrap.scss
@@ -13,3 +13,5 @@
 @import 'bootstrap/scss/alert';
 @import 'bootstrap/scss/list-group';
 @import 'bootstrap/scss/utilities';
+@import 'bootstrap/scss/modal';
+@import 'bootstrap/scss/close';
