--- a/app/views/admin/educations/_form.html.erb
+++ b/app/views/admin/educations/_form.html.erb
@@ -1,18 +1,19 @@
+<%= turbo_frame_tag education, class: "col-md-6 pt-3 item" do %>
+  <%= simple_form_for([:admin, education]) do |f| %>
+    <%= f.error_notification %>
+    <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-<%= simple_form_for([:admin, education]) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+    <div class="form-inputs">
+      <%= f.input :course %>
+      <%= f.input :institution %>
+      <%= f.input :description %>
+      <%= f.input :start_date, include_blank: true %>
+      <%= f.input :end_date, include_blank: true %>
+      <%= f.input :locale %>
+    </div>
 
-  <div class="form-inputs">
-    <%= f.input :course %>
-    <%= f.input :institution %>
-    <%= f.input :description %>
-    <%= f.input :start_date, include_blank: true %>
-    <%= f.input :end_date, include_blank: true %>
-    <%= f.input :locale %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+    <div class="form-actions">
+      <%= f.button :submit %>
+    </div>
+  <% end %>
 <% end %>
