--- a/app/views/admin/educations/index.html.erb
+++ b/app/views/admin/educations/index.html.erb
@@ -2,7 +2,7 @@
   <h1 class="h2"><%= Education.model_name.human.pluralize %></h1>
   <div class="btn-toolbar mb-2 mb-md-0">
     <div class="btn-group mr-2">
-      <%= link_to t(:new, scope: %i[helpers]), %i[new admin education], class: 'btn btn-sm btn-outline-secondary' %>
+      <%= link_to t(:new, scope: %i[helpers]), "#", class: 'btn btn-sm btn-outline-secondary', data: { toggle: 'modal', target: '#modal_new_education' } %>
     </div>
   </div>
 </div>
@@ -11,6 +11,8 @@
 
 <%= render 'admin/shared/tabs', action: :educations %>
 
-<div class="row pt-3 sortable" data-url="<%= admin_reorder_path %>" data-model="<%= Education.model_name.param_key %>">
+<%= turbo_frame_tag "educations_#{active_locale}", class: "row sortable", data: { url: admin_reorder_path, model: Education.model_name.param_key } do %>
   <%= render @educations %>
-</div>
+<% end %>
+
+<%= render partial: 'admin/shared/modal', locals: { model: Education } %>
