--- a/app/views/admin/skills/_skill.html.erb
+++ b/app/views/admin/skills/_skill.html.erb
@@ -1,14 +1,14 @@
-<div class="col-md-6 pt-3 item">
+<%= turbo_frame_tag skill, class: "col-md-6 pt-3 item", data: { id: skill.id } do %>
   <div class="list-group-item flex-column align-items-start">
     <div class="d-flex justify-content-between pb-2 pt-2">
       <h5 class="mb-1"><%= skill.name %></h5>
       <div class="btn-toolbar mb-2 mb-md-0">
         <div class="btn-group">
           <%= link_to t(:edit, scope: %i[helpers]), [:edit, :admin, skill], class: 'btn btn-sm btn-outline-primary' %>
-          <%= link_to t(:delete, scope: %i[helpers]), [:admin, skill], class: 'btn btn-sm btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %>
+          <%= link_to t(:delete, scope: %i[helpers]), [:admin, skill], class: 'btn btn-sm btn-danger', data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' } %>
         </div>
       </div>
     </div>
     <p><%= Skill.human_attribute_name(:value) %>: <%= skill.value %></p>
   </div>
-</div>
+<% end %>
