--- a/app/views/admin/skills/index.html.erb
+++ b/app/views/admin/skills/index.html.erb
@@ -2,7 +2,7 @@
   <h1 class="h2"><%= Skill.model_name.human.pluralize %></h1>
   <div class="btn-toolbar mb-2 mb-md-0">
     <div class="btn-group mr-2">
-      <%= link_to t(:new, scope: %i[helpers]), %i[new admin skill], class: 'btn btn-sm btn-outline-secondary' %>
+      <%= link_to t(:new, scope: %i[helpers]), "#", class: 'btn btn-sm btn-outline-secondary', data: { toggle: 'modal', target: '#modal_new_skill' } %>
     </div>
   </div>
 </div>
@@ -11,6 +11,8 @@
 
 <%= render 'admin/shared/tabs', action: :skills %>
 
-<div class="row pt-3">
+<%= turbo_frame_tag 'skills', class: "row" do %>
   <%= render @skills %>
-</div>
+<% end %>
+
+<%= render partial: 'admin/shared/modal', locals: { model: Skill } %>
