--- a/app/views/admin/work_experiences/_form.html.erb
+++ b/app/views/admin/work_experiences/_form.html.erb
@@ -1,20 +1,21 @@
+<%= turbo_frame_tag work_experience do %>
+  <%= simple_form_for([:admin, work_experience]) do |f| %>
+    <%= f.error_notification %>
+    <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-<%= simple_form_for([:admin, work_experience]) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+    <div class="form-inputs">
+      <%= f.input :company_name %>
+      <%= f.input :position %>
+      <%= f.input :city %>
+      <%= f.input :country, collection: Country.all %>
+      <%= f.input :start_date, include_blank: true %>
+      <%= f.input :end_date, include_blank: true %>
+      <%= f.input :description %>
+      <%= f.input :locale %>
+    </div>
 
-  <div class="form-inputs">
-    <%= f.input :company_name %>
-    <%= f.input :position %>
-    <%= f.input :city %>
-    <%= f.input :country, collection: Country.all %>
-    <%= f.input :start_date, include_blank: true %>
-    <%= f.input :end_date, include_blank: true %>
-    <%= f.input :description %>
-    <%= f.input :locale %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+    <div class="form-actions">
+      <%= f.button :submit %>
+    </div>
+  <% end %>
 <% end %>
