--- a/app/views/admin/work_experiences/index.html.erb
+++ b/app/views/admin/work_experiences/index.html.erb
@@ -2,7 +2,7 @@
   <h1 class="h2"><%= WorkExperience.model_name.human.pluralize %></h1>
   <div class="btn-toolbar mb-2 mb-md-0">
     <div class="btn-group mr-2">
-      <%= link_to t(:new, scope: %i[helpers]), %i[new admin work_experience], class: 'btn btn-sm btn-outline-secondary' %>
+      <%= link_to t(:new, scope: %i[helpers]), "#", class: 'btn btn-sm btn-outline-secondary', data: { toggle: 'modal', target: '#modal_new_work_experience' } %>
     </div>
   </div>
 </div>
@@ -11,6 +11,8 @@
 
 <%= render 'admin/shared/tabs', action: :work_experiences %>
 
-<div class="row pt-3 sortable" data-url="<%= admin_reorder_path %>" data-model="<%= WorkExperience.model_name.param_key %>">
+<%= turbo_frame_tag 'work_experiences', class: "row sortable", data: { url: admin_reorder_path, model: WorkExperience.model_name.param_key } do %>
   <%= render @work_experiences %>
-</div>
+<% end %>
+
+<%= render partial: 'admin/shared/modal', locals: { model: WorkExperience } %>
