--- a/app/views/admin/shared/_notification.html.erb
+++ b/app/views/admin/shared/_notification.html.erb
@@ -1,11 +1,13 @@
-<% if notice %>
-  <div>
-    <p class="alert alert-success"><%= notice %></p>
-  </div>
-<% end %>
+<%= turbo_frame_tag "notifications" do %>
+  <% if notice %>
+    <div>
+      <p class="alert alert-success"><%= notice %></p>
+    </div>
+  <% end %>
 
-<% if alert %>
-  <div>
-    <p class="alert alert-warning"><%= alert %></p>
-  </div>
+  <% if alert %>
+    <div>
+      <p class="alert alert-warning"><%= alert %></p>
+    </div>
+  <% end %>
 <% end %>
