--- a/app/views/admin/educations/create.turbo_stream.erb
+++ b/app/views/admin/educations/create.turbo_stream.erb
@@ -1,6 +1,7 @@
 <% if @education.persisted? %>
   <%= turbo_stream.append "educations_#{@education.locale.downcase}", partial: 'education', locals: { education: @education.decorate } %>
   <%= turbo_stream.replace 'modal', partial: 'admin/shared/modal', locals: { model: Education } %>
+  <%= turbo_stream.replace 'notifications', partial: 'admin/shared/notification', locals: { notice: t('helpers.created', model: Education) } %>
 <% else %>
   <%= turbo_stream.replace 'new_education', partial: 'form', locals: { education: @education } %>
 <% end %>
