--- a/app/views/admin/educations/destroy.turbo_stream.erb
+++ b/app/views/admin/educations/destroy.turbo_stream.erb
@@ -1,1 +1,2 @@
 <%= turbo_stream.remove @education %>
+<%= turbo_stream.replace 'notifications', partial: 'admin/shared/notification', locals: { notice: t('helpers.deleted', model: Education) } %>
